hphp/hack/test/typecheck/delay_preserves_type_error.php.exp
ERROR: File "delay_preserves_type_error.php", line 13, characters 7-8:
Invalid argument (Typing[4110])
  File "delay_preserves_type_error.php", line 8, characters 14-16:
  Expected `int`
  File "delay_preserves_type_error.php", line 4, characters 23-36:
  But got `Awaitable<int>`
